--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,20 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    }
-  ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "name": "Headline Fetcher",
+  "manifest_version": 2,
+  "version": "0.0.1",
+  "description": "Retrieves headlines relevant to the website you are currently on",
+  "content_scripts": [{
+    "js": [ "content.js"],
+    "matches": [ "<all_urls>"]
+   }],
+  "background": {
+    "scripts": ["background.js"]
+   },
+   "icons": {
+    "16": "newspaper.png",
+    "48": "newspaper.png",
+    "128": "newspaper.png"
+  },
+   "permissions": ["contextMenus", "tabs"],
+   "web_accessible_resources" : ["*.html"]
 }
