added ability to choose category of news and number of headlines

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,6 +3,9 @@
   "manifest_version": 2,
   "version": "0.0.1",
   "description": "Retrieves headlines relevant to the website you are currently on",
+  "browser_action": {
+    "default_popup": "index.html"
+  },
   "content_scripts": [{
     "js": [ "content.js"],
     "matches": [ "<all_urls>"]
